--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,7 +44,7 @@
     // "forwardPorts": [],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    // "postCreateCommand": "./.devcontainer/postCreateCommand.sh"
+    "postCreateCommand": "bash backend/postCreateCommand.sh"
 
     // Configure tool-specific properties.
     // "customizations": {},
