--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 pytest
 Flask-SQLAlchemy==3.1.1
 Flask_Cors==4.0.0
+flask-restx==1.3.0
 black==23.11.0
 # Flask_Mail==0.9.1
 # Flask-APScheduler==1.12.4
