--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,7 +35,7 @@
                 }
             }
         }
-    },
+    }
 
     // Features to add to the dev container. More info: https://containers.dev/features.
     // "features": {},
@@ -44,7 +44,7 @@
     // "forwardPorts": [],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "bash backend/postCreateCommand.sh"
+    // "postCreateCommand": "bash backend/postCreateCommand.sh"
 
     // Configure tool-specific properties.
     // "customizations": {},
