--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
                 },
                 "telemetry.telemetryLevel": "off",
                 "python.defaultInterpreterPath": "./backend/.venv/bin/python",
-                "python.pythonPath": "/backend/.venv/bin/python",
+                "python.pythonPath": "/usr/local/bin/python",
                 "python.analysis.extraPaths": ["./venv"],
                 "python.languageServer": "Pylance",
                 "python.formatting.provider": "none",
@@ -45,7 +45,7 @@
     // "forwardPorts": [],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "bash backend/postCreateCommand.sh && source backend/.venv/bin/activate"
+    "postCreateCommand": "bash ./backend/postCreateCommand.sh"
 
     // Configure tool-specific properties.
     // "customizations": {},
