--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
 {
     "name": "Python 3",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-    "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
+    // "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
+    "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
     "customizations": {
         "vscode": {
             "extensions": [
@@ -36,7 +37,7 @@
                 }
             }
         }
-    },
+    }
 
     // Features to add to the dev container. More info: https://containers.dev/features.
     // "features": {},
@@ -45,7 +46,7 @@
     // "forwardPorts": [],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "bash ./backend/postCreateCommand.sh"
+    // "postCreateCommand": "bash ./backend/postCreateCommand.sh"
 
     // Configure tool-specific properties.
     // "customizations": {},
