--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,40 +4,41 @@
     "name": "aegile",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
     // "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
-    "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye"
-    // "customizations": {
-    //     "vscode": {
-    //         "extensions": [
-    //             "ms-python.python",
-    //             "ms-python.black-formatter",
-    //             "GitHub.copilot",
-    //             "ms-python.pylint",
-    //             "ms-python.vscode-pylance",
-    //             "njpwerner.autodocstring"
-    //         ],
-    //         "settings": {
-    //             "terminal.integrated.env.linux": {
-    //                 "PYTHONPATH": "/workspaces/aegile/backend"
-    //             },
-    //             "telemetry.telemetryLevel": "off",
-    //             "python.defaultInterpreterPath": "./backend/.venv/bin/python",
-    //             "python.pythonPath": "/usr/local/bin/python",
-    //             "python.analysis.extraPaths": ["./venv"],
-    //             "python.languageServer": "Pylance",
-    //             "python.formatting.provider": "none",
-    //             "black-formatter.importStrategy": "fromEnvironment",
-    //             "source.organizeImports": true,
-    //             "[python]": {
-    //                 "editor.defaultFormatter": "ms-python.black-formatter",
-    //                 "editor.formatOnSave": true,
-    //                 "editor.defaultLinter": "pylint",
-    //                 "editor.codeActionsOnSave": [
-    //                     "source.organizeImports"
-    //                 ]
-    //             }
-    //         }
-    //     }
-    // }
+    "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "ms-python.python",
+                "ms-python.black-formatter",
+                "GitHub.copilot",
+                "ms-python.pylint",
+                "ms-python.vscode-pylance",
+                "njpwerner.autodocstring",
+                "moalamri.inline-fold"
+            ],
+            "settings": {
+                "terminal.integrated.env.linux": {
+                    "PYTHONPATH": "/workspaces/aegile/backend"
+                },
+                "telemetry.telemetryLevel": "off",
+                "python.defaultInterpreterPath": "./.venv/bin/python",
+                "python.pythonPath": "/usr/local/bin/python",
+                "python.analysis.extraPaths": ["./venv"],
+                "python.languageServer": "Pylance",
+                "python.formatting.provider": "none",
+                "black-formatter.importStrategy": "fromEnvironment",
+                "source.organizeImports": true,
+                "[python]": {
+                    "editor.defaultFormatter": "ms-python.black-formatter",
+                    "editor.formatOnSave": true,
+                    "editor.defaultLinter": "pylint",
+                    "editor.codeActionsOnSave": [
+                        "source.organizeImports"
+                    ]
+                }
+            }
+        }
+    },
 
     // Features to add to the dev container. More info: https://containers.dev/features.
     // "features": {},
@@ -46,7 +47,7 @@
     // "forwardPorts": [],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-    // "postCreateCommand": "bash ./backend/postCreateCommand.sh"
+    "postCreateCommand": "bash setup.sh"
 
     // Configure tool-specific properties.
     // "customizations": {},
