--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-SQLAlchemy==3.0.2
 flask-restx==1.2.0
 Flask==2.2.2
 Werkzeug==2.2.2
-psycopg2-binary
 Flask_Cors==4.0.0
 Flask-JWT-Extended==4.5.3
+psycopg2-binary
+python-dotenv
