fix: fix deployment pacakge lock error with updated pnpm lock

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "concurrently \"pnpm run next-dev\" \"pnpm run flask-dev\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "reset": "pnpm store prune && rm -rf node_modules && pnpm install"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.3",
