--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -27,12 +29,14 @@
     "cookies-next": "^4.1.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "lucide-react": "^0.304.0",
     "next": "13.4.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-resizable-panels": "^1.0.7",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.2",
