--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "concurrently": "^8.0.1",
     "cookies-next": "^4.1.0",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint-config-next": "^14.0.4",
     "lucide-react": "^0.304.0",
-    "next": "13.4.3",
+    "next": "^14.0.4",
+    "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-resizable-panels": "1.0.6",
     "sonner": "^1.3.1",
