--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-resizable-panels": "1.0.6",
+    "sharp": "^0.33.1",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.2",
