--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
@@ -48,7 +48,10 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.0.4",
+    "typescript": "^5.3.3",
     "zod": "3.21.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.47"
   }
 }
