--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cmdk": "^0.2.0",
     "concurrently": "^8.0.1",
     "cookies-next": "^4.1.0",
+    "date-fns": "^3.2.0",
     "eslint": "8.40.0",
     "eslint-config-next": "^14.0.4",
     "lucide-react": "^0.304.0",
@@ -43,6 +44,7 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-resizable-panels": "1.0.6",
