feat: add vscode dev container extensions and settigns for react

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
                 "ChakrounAnas.turbo-console-log",
                 "Orta.vscode-twoslash-queries",
                 "deerawan.vscode-faker",
-                "bradlc.vscode-tailwindcss"
+                "bradlc.vscode-tailwindcss",
+                "wix.glean"
             ],
             "settings": {
                 "terminal.integrated.env.linux": {
