--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "flask-dev": "FLASK_DEBUG=1 pip3 install -r requirements.txt && python3 -m flask --app api/index run -p 5328",
+    "fast-dev": "pip3 install -q -r requirements.txt && uvicorn api.index:app --host 0.0.0.0 --reload --port 5328",
     "next-dev": "next dev --turbo",
-    "dev": "concurrently \"pnpm run next-dev\" \"pnpm run flask-dev\"",
+    "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fast-dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
