--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 pytest
 black==23.11.0
+SQLAlchemy==2.0.29
 fastapi==0.110.0
 pydantic==2.6.4
 python-dotenv
@@ -8,3 +9,5 @@ aiosqlite==0.20.0
 passlib==1.7.4
 types-passlib==1.7.7.12
 asyncpg==0.29.0
+PyJWT==2.8.0
+Werkzeug==3.0.2
