--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "next-flask",
+  "name": "nextjs-fastapi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "fast-dev": "pip3 install -q -r requirements.txt && uvicorn api.index:app --host 0.0.0.0 --reload --port 5328",
+    "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
     "next-dev": "next dev --turbo",
-    "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fast-dev\"",
+    "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
