--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "next-flask",
+  "name": "nextjs-fastapi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "fast-dev": "pip3 install -q -r requirements.txt && uvicorn api.index:app --host 0.0.0.0 --reload --port 5328",
+    
+    "fastapi-dev": "pip3 install -q -r requirements.txt && python3 -m uvicorn api.index:app --reload",
     "next-dev": "next dev --turbo",
-    "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fast-dev\"",
+    "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -18,6 +19,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.3.3",
+    "@preact/signals-react": "^2.0.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -54,6 +56,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-icons": "^5.0.1",
     "react-resizable-panels": "1.0.6",
     "sharp": "^0.33.1",
     "sonner": "^1.3.1",
