feat: add explicit PYTHONPATH declaration to vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
     "api/**": {
       "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
     }
-  }
+  },
+  "env": {
+    "PYTHONPATH": "server/"
+}
 }
