--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    
     "fastapi-dev": "pip3 install -q -r requirements.txt && python3 -m uvicorn api.index:app --reload",
     "next-dev": "next dev --turbo",
     "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\"",
@@ -34,6 +33,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.11.6",
     "@types/node": "20.1.4",
