--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
+    "vaul": "^0.9.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
