--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "fastapi-dev": "pip3 install -q -r requirements.txt && python3 -m uvicorn api.index:app --reload",
-    "next-dev": "next dev",
+    "next-dev": "next dev --turbo",
     "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
