--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,4 @@
 {
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "importOrder": ["^(react/(.*)$)|^(react$)","^(next/(.*)$)|^(next$)","","<THIRD_PARTY_MODULES>","","^types$","^@/env(.*)$","^@/types/(.*)$","^@/config/(.*)$","^@/lib/(.*)$","^@/hooks/(.*)$","^@/components/ui/(.*)$","^@/components/(.*)$","^@/styles/(.*)$","^@/app/(.*)$","","^[./]"],
+  "plugins": ["prettier-plugin-tailwindcss", "@ianvs/prettier-plugin-sort-imports"]
 }
