--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/react": "^18.3.1",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14"
