--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@hookform/resolvers": "^3.3.4",
-    "@preact/signals-react": "^2.0.1",
+    "@hookform/resolvers": "^3.6.0",
+    "@preact/signals-react": "^2.0.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -31,6 +31,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
@@ -40,21 +41,21 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-table": "^8.16.0",
+    "@tanstack/react-table": "^8.17.3",
     "@types/node": "20.1.4",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
     "concurrently": "^8.2.2",
-    "cookies-next": "^4.1.1",
+    "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "eslint": "8.40.0",
-    "eslint-config-next": "^14.2.3",
+    "eslint-config-next": "^14.2.4",
     "lucide-react": "^0.304.0",
-    "next": "^14.2.3",
+    "next": "^14.2.4",
     "next-auth": "5.0.0-beta.17",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
@@ -62,22 +63,22 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.51.3",
-    "react-icons": "^5.2.0",
+    "react-hook-form": "^7.52.0",
+    "react-icons": "^5.2.1",
     "react-resizable-panels": "1.0.6",
-    "sharp": "^0.33.3",
-    "sonner": "^1.4.41",
+    "sharp": "^0.33.4",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
-    "vaul": "^0.9.0",
+    "vaul": "^0.9.1",
     "zod": "3.21.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@types/react": "^18.3.1",
-    "prettier": "^3.2.5",
+    "@types/react": "^18.3.3",
+    "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14"
   }
 }
