fix: move tailwind class sorting to end of plugins list

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,4 @@
 {
   "importOrder": ["^(react/(.*)$)|^(react$)","^(next/(.*)$)|^(next$)","","<THIRD_PARTY_MODULES>","","^types$","^@/env(.*)$","^@/types/(.*)$","^@/config/(.*)$","^@/lib/(.*)$","^@/hooks/(.*)$","^@/components/ui/(.*)$","^@/components/(.*)$","^@/styles/(.*)$","^@/app/(.*)$","","^[./]"],
-  "plugins": ["prettier-plugin-tailwindcss", "@ianvs/prettier-plugin-sort-imports"]
+  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"]
 }
